<resources>
    <string name="app_name">volleyball</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="boton">Iniciar sesion</string>
    <string name="boton_jugador_expulsado">Volver a lista de jugadores</string>
    <string name="boton_vovler_lista_partidos">Volver a lista de partidos</string>
    <string name="puntuacion1">Puntuacion Final equipo 1</string>
    <string name="puntuacion2">Puntuacion Final equipo 2</string>
    <string name="equipo1">Equipo 1</string>
    <string name="equipo2">Equupo 2</string>
    <string name="puntuacion">Puntuacion Final</string>
    <string name="botonRegistrar">Registrar</string>
    <string name="botonAgregarFalta">Agregar Falta</string>
    <string name="IniciarPartido">Iniciar Set</string>
    <string name="Reiniciarcronometro">Reiniciar Cronometro</string>
    <string name="PausarPartido">Pausar Set</string>
    <string name="botonJugarOtroSet">Jusgar Otro Set</string>
</resources>
