<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".FinPartido">

    <Button
        android:id="@+id/volverListaPartidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:background="@drawable/my_button"
        android:onClick="volverLista"
        android:padding="10dp"
        android:text="@string/boton_vovler_lista_partidos"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/jugarOtroSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/my_button"
        android:onClick="jugarOtroSet"
        android:padding="10dp"
        android:text="@string/botonJugarOtroSet"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/puntuacion"
        android:textColor="@android:color/background_light"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEquipo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewEquipo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:text="@string/equipo2"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEquipo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewEquipo1" />

    <TextView
        android:id="@+id/textViewEquipo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="37dp"
        android:text="@string/equipo1"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPuntuacion1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewPuntuacion2"
        android:layout_width="141dp"
        android:layout_height="129dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/puntuacion2"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEquipo2" />

    <TextView
        android:id="@+id/textViewPuntuacion1"
        android:layout_width="133dp"
        android:layout_height="129dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="236dp"
        android:text="@string/puntuacion1"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>