<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividadPartido">

    <TextView
        android:id="@+id/equipo1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/equipo1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/puntosEquipo1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/equipo2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="39dp"
        android:text="@string/equipo2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/puntosEquipo1"
        android:layout_width="0dp"
        android:layout_height="138dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:clickable="false"
        android:onClick="sumarPuntos1"
        android:text="0"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/puntosEquipo2"
        app:layout_constraintEnd_toStartOf="@+id/puntosEquipo2"
        app:layout_constraintStart_toStartOf="@+id/equipo1Text" />

    <Button
        android:id="@+id/puntosEquipo2"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="@android:color/holo_purple"
        android:clickable="false"
        android:onClick="sumarPuntos2"
        android:text="0"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/agregarFaltaButton"
        app:layout_constraintEnd_toEndOf="@+id/equipo2Text"
        app:layout_constraintTop_toBottomOf="@+id/equipo2Text" />

    <Button
        android:id="@+id/agregarFaltaButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="273dp"
        android:layout_marginEnd="36dp"
        android:onClick="agregarFalta"
        android:text="@string/botonAgregarFalta"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="162dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="67dp"
        android:text="00:00"
        android:textAlignment="center"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="@+id/iniciarPartidoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregarFaltaButton" />

    <Button

        android:id="@+id/iniciarPartidoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="IniciarCronometro"
        android:text="@string/IniciarPartido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/pausarPartidoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="pausarCronometro"
        android:text="@string/PausarPartido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/reiniciarPartidoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="reiniciarCronometro"
        android:text="@string/Reiniciarcronometro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />


</androidx.constraintlayout.widget.ConstraintLayout>